Fix HFRoute back button overlap with announcement bar

--- a/webapp/channels/src/components/header_footer_route/header.scss
+++ b/webapp/channels/src/components/header_footer_route/header.scss
@@ -91,6 +91,14 @@
     }
 }
 
+body.announcement-bar--fixed {
+    .hfroute-header {
+        .header-back-button {
+            top: unset;
+        }
+    }
+}
+
 @media screen and (max-width: 699px) {
     .hfroute-header {
         padding: 0 24px;
